# python-dependency-management

./: README.md
pip-venv/: README.md
poetry/: README.md  pyproject.toml
uv/: README.md  data_pipeline.py  pyproject.toml
